<resources>
    <string name="app_name">TelecosFacturaMovil</string>
    <string name="title_activity_invoice">Facturas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Marcelo Mora</string>
    <string name="email_example">jhon_doe@example.com</string>
    <string name="email">Correo</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="title_activity_product_list">Productos</string>
    <string name="title_activity_customer_list">Clientes</string>
    <string name="title_activity_customer_form">Cliente</string>
    <string name="title_activity_invoice_form">Factura</string>
    <string name="customer">Cliente</string>
    <string name="address">Dirección</string>
    <string name="save">Guardar</string>
    <string name="subtotal">Subtotal</string>
    <string name="zeroFloat">0.00</string>
    <string name="vat">IVA</string>
    <string name="total">Total</string>
    <string name="show_location">Mostar ubicación</string>
    <string name="search">Buscar</string>
    <string name="server">Servidor</string>
    <string name="password">Contraseña</string>
    <string name="host">Host</string>
    <string name="username">Usuario</string>
    <string name="ok_save">Comprobar y guardar</string>
    <string name="serie">Serie</string>
    <string name="host_field_required">¡La dirección del servidor es requerida!</string>
    <string name="username_field_required">¡El usuario es requerido!</string>
    <string name="password_field_required">¡La contraseña es requerida!</string>
    <string name="email_field_required">¡La dirección de correo es requerida!</string>
    <string name="serie_field_required">¡La serie es requerida!</string>
    <string name="title_activity_invoice_line">InvoiceLineActivity</string>
    <string name="icc">ICC</string>
    <string-array name="products_array">
        <item>SIM CARD</item>
        <item>BASE CELULAR</item>
        <item>SERVICIO</item>
    </string-array>


</resources>
